[tool.poetry]
name = "currency-bot"
version = "0.1.0"
description = ""
authors = ["Wyatt Baek <president@gaplagov.org>" "Scott Chiang <pain@gaplagov.org>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
replit = "^2.0.0"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
